k8s/radu.marin/manifests/r-db-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: r-db-svc
  namespace: rm-db
  labels:
    app: r-db-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: r-db-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: r-db-ss
  namespace: rm-db
spec:
  selector:
    matchLabels:
      app: r-db-mysql # has to match .spec.template.metadata.labels

  serviceName: "r-db-svc"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: r-db-mysql # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: r-db-mysql
        image: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: r-mysql-storage
          mountPath: /var/lib/mysql
      nodeSelector:
        topology.ebs.csi.aws.com/zone: "eu-central-1b"
  volumeClaimTemplates:
  - metadata:
      name: r-mysql-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ebs-sc"
      resources:
        requests:
          storage: 1Gi
