k8s/radu.marin/manifests/r-webapp-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: r-webapp-svc
  namespace: rm-webapp
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: devops-webapp-sample
  type: ClusterIP
