k8s/radu.marin/manifests/r-ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: r-ingress-alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /alertmanager(/|$)(.*)
          backend:
            service:
              name: alertmanager-main
              port:
                number: 9093
