k8s/radu.marin/manifests/r-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: r-ingress-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /grafana(/|$)(.*)
          backend:
            service:
              name: grafana
              port:
                number: 3000
