k8s/radu.marin/manifests/r-ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r-ingress-prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/prometheus"
          backend:
            service:
              name: prometheus-k8s
              port:
                number: 9090
