k8s/radu.marin/manifests/r-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r-ingress
  namespace: rm-webapp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: r-webapp-svc
              port:
                number: 80
